--- a/app.json
+++ b/app.json
@@ -31,19 +31,19 @@
 
         "BOT_TOKEN": {
 
-            "description": "Your Bot token from @Botfather"
+            "description": "7159828976:AAFlwpuCRlnmIx1wiV65hMwyEbH-8i7EvwU"
 
         },
 
         "API_ID": {
 
-            "description": "Your API_ID from https://my.telegram.org/apps"
+            "description": "29611474"
 
         },
 
         "API_HASH": {
 
-            "description": "Your API_HASH from https://my.telegram.org/apps"
+            "description": "43b3fdc649a8266de1b8ba3facc4aa75"
 
         }
 
